<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOMPRO</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_up">Sign Up</string>
    <string name="doctor">Doctor</string>
    <string name="choose_your_category">Choose Your Category</string>
    <string name="nurse">Nurse</string>
    <string name="mother">Mother</string>
    <string name="ad_holder">Ad Holder</string>
    <string name="mothers_login">Mothers Login</string>
    <string name="mother_login">Mother Login</string>
    <string name="user_name">User Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registar_new">Registar new</string>
    <string name="mother_apos_s_registration">Mother&amp;apos;s registration&amp;apos;s Registration</string>
    <string name="mothr_apos_s_registration">Mother\'s registration</string>

</resources>
